# openstar-kotierapp

./: .flutter-plugins-dependencies  .gitignore  .impeccable.md  CHANGELOG.md  LAN_VISIBILITY_INVESTIGATION.md  PROGRESS.md  README.md  install_apk.bat  install_apk.py  pubspec.yaml  script.ps1  版本检查接口文档.md  版本记录.md  重构文档_C++_Qt迁移方案.md
.github/workflows/: android-release.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-05-12_14-48-21Z-apk.md  2026-05-13_11-52-20Z-f-1python-xiangmu-openstar.md  2026-05-13_12-15-10Z.md
android/: build-and-install.ps1  build-and-install.sh  fix.ps1  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts  proguard-rules.pro
android_backup/: FRONTEND_DEVELOPMENT_GUIDE.md
android_backup/app/: build.gradle.kts
backend/: BACKEND_INTEGRATION_GUIDE.md  DEVELOPMENT_PLAN.md  README.md  build.gradle.kts
backend/adapters/: README.md
backend/core/: easytier.models.json
backend/protocol/: README.md  easytier.rpc.json
ios/Flutter/: Generated.xcconfig
lib/: app.dart  locator_ffi.dart  locator_stub.dart  main.dart
lib/core/: easy_tier_service.dart  log_service.dart  native_easy_tier_service.dart
lib/pages/: home_page.dart  log_page.dart  network_config_page.dart  one_click_page.dart  servers_page.dart  (+1 more)
qt_app/: CMakeLists.txt  qtquickcontrols2.conf
qt_app/android/: AndroidManifest.xml
qt_app/android/res/values/: themes.xml
qt_app/android/src/com/easytier/service/: EasyTierVpnService.java
qt_app/qml/: MainWindow.qml
qt_app/qml/components/: CompactTopBar.qml  CustomSwitch.qml  NodeInfoCard.qml  SectionCard.qml
qt_app/qml/pages/: LogPage.qml  NetworkConfigPage.qml  OneClickPage.qml  ServersPage.qml  SettingsPage.qml
qt_app/qml/theme/: Theme.qml  ThemeSettings.qml
qt_app/src/: main.cpp
qt_app/src/application/: EasyTierApplication.cpp  EasyTierApplication.hpp  MainWindowController.cpp  MainWindowController.hpp
qt_app/src/data/: LogEntry.hpp  NetworkConfig.cpp  NetworkConfig.hpp  NodeInfo.hpp  PublicNode.hpp  ServerEntry.hpp
qt_app/src/ffi/: RustFfi.cpp  RustFfi.hpp
qt_app/src/service/: EasyTierService.cpp  EasyTierService.hpp  LogService.cpp  LogService.hpp  PublicNodeService.cpp  PublicNodeService.hpp  SettingsRepository.cpp  SettingsRepository.hpp
qt_app/src/utils/: Base32.cpp  Base32.hpp  JniBridge.cpp  JniBridge.hpp
test/: widget_test.dart
web/: index.html
(+88 files in other folders)
